--- a/festival/templates/festival/artist_detail.html
+++ b/festival/templates/festival/artist_detail.html
@@ -27,7 +27,7 @@
 <h2 class="section__title">{% trans "Also discover" %}</h2> <br>
 <div class="msry__container">
  <div class="msry__sizer"></div>
- {% for event in artist.events.all %}
+ {% for event in artist.events.all|no_parents %}
     {% include 'agenda/includes/event_card.html' %}
  {% endfor %}
  {% for video in artist.videos.all %}
