--- a/app/templates/includes/footer_scripts.html
+++ b/app/templates/includes/footer_scripts.html
@@ -1,7 +1,7 @@
 {% load mezzanine_tags i18n staticfiles %}
 
 {% compress js %}
-    <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
+    <script src="{{ STATIC_URL }}jquery/dist/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{% static "js/vendor/jquery.1.12.1.min.js" %}"><\/script>')</script>
     <script src="{% static "mezzanine/js/"|add:settings.JQUERY_FILENAME %}"></script>
     <script src="{% static "js/plugins.js" %}"></script>
