--- a/templates/agenda/event_booking.html
+++ b/templates/agenda/event_booking.html
@@ -1,5 +1,5 @@
 {% extends "agenda/event_detail.html" %}
-{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n future disqus_tags event_tags festival_tags %}
+{% load mezzanine_tags comment_tags keyword_tags rating_tags i18n future disqus_tags event_tags featured_tags %}
 
 {% block event_detail_postedby %}
 {% endblock %}
