--- a/templates/includes/slider.html
+++ b/templates/includes/slider.html
@@ -1,4 +1,4 @@
-{% load i18n event_tags festival_tags mezzanine_tags %}
+{% load i18n event_tags featured_tags mezzanine_tags %}
 <div class="hero__slider">
     <ul id="lightSlider">
         {% featured_events as events %}
