--- a/templates/templates/festival/video_list.html
+++ b/templates/templates/festival/video_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
-{% load mezzanine_tags keyword_tags festival_tags %}
+{% load mezzanine_tags keyword_tags featured_tags %}
 
 {% block title %}
  {% trans "Videos" %}
