--- a/static/src/sass/config/_variables.scss
+++ b/static/src/sass/config/_variables.scss
@@ -15,7 +15,7 @@ $breakpoints: (
 );
 
 $grid-columns: 12;
-$grid-gutter: 24px;
+$grid-gutter: 30px;
 $grid-container-prefix: 'container';
 $grid-row-prefix: 'row';
 $grid-col-prefix: 'col';
@@ -34,7 +34,7 @@ $headings-font-family: $primary-font-family;
 
 // Layout
 
-
+$header-pre-height: 34px;
 
 // Typey
 
