--- a/app/static/src/sass/layout/_header.scss
+++ b/app/static/src/sass/layout/_header.scss
@@ -2,6 +2,12 @@ $module: ".header";
 
 #{$module} {
 
+    &__pre {
 
+        background: $color-black;
+        height: $header-pre-height;
+        color: white;
+
+    }
 
 }
