--- a/app/static/src/sass/global/_helpers.scss
+++ b/app/static/src/sass/global/_helpers.scss
@@ -31,6 +31,15 @@
 .bg {
     background-color: $color-main;
 }
+.tac {
+    text-align: center;
+}
+.tar {
+    text-align: right;
+}
+.tal {
+    text-align: left;
+}
 .hide-xxs {
     @include mq($until: xs) {
         display: none;
