--- a/app/templates/pages/menus/action.html
+++ b/app/templates/pages/menus/action.html
@@ -6,36 +6,19 @@
     {% for page in page_branch %}
         {% if page.is_primary %}
             {% if forloop.first %}
-                <div>
-                <ul>
-            {% endif %}
-            {% if page.in_menu %}
-                {# <ul class="list-unstyled"> #}
+                <ul class="nav-actions">
             {% endif %}
         {% endif %}
         {% if page.in_menu %}
             {% if forloop.first and not page.parent.in_menu and not page.is_primary %}
             {% endif %}
-            <li>
-                <h2>
-                    <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
-                </h2>
+            <li class="nav-actions__item {% if page.is_current_or_ascendant %}active{% endif %}">
+                <a class="nav-actions__item-link" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
             </li>
         {% endif %}
-        {% if page.in_menu and page.has_children_in_menu %}{% page_menu page %}{% endif %}
-        {% if page.in_menu %}
-            {% if forloop.first and not page.parent.in_menu and not page.is_primary %}
-            {# </li> #}
-            {% endif %}
-            {# </ul> #}
-        {% endif %}
         {% if page.is_primary %}
-            {% if page.in_menu %}
-            {# </ul> #}
-            {% endif %}
             {% if forloop.last %}
             </ul>
-            </div>
             {% endif %}
         {% endif %}
     {% endfor %}
