Update logo, language switcher and breadcrumb

--- a/app/static/src/sass/config/_colors.scss
+++ b/app/static/src/sass/config/_colors.scss
@@ -10,6 +10,7 @@ $color-soundcloud: #f50;
 $color-vimeo: #4bf;
 $color-youtube: #bb0000;
 
+$color-white: #FFFFFF;
 $color-main: #F8E71C;
 $color-gray: #C3C3C3;
 $color-black: #1D1D1B;
