--- a/app/static/src/sass/modules/_all.scss
+++ b/app/static/src/sass/modules/_all.scss
@@ -1,7 +1,9 @@
 // Navs
 @import "navs/nav-actions";
+@import "navs/nav-header";
 
 @import 'breadcrumb';
+@import 'lang-switcher';
 @import 'dashed';
 @import 'dotted';
 @import 'tag';
