--- a/app/templates/pages/menus/breadcrumb.html
+++ b/app/templates/pages/menus/breadcrumb.html
@@ -6,18 +6,18 @@
 {% for page in page_branch %}
 
     {% if not has_home and page.is_primary and forloop.first %}
-    <li id="breadcrumb-menu-home">
-        <a href="{% url "home" %}">{% trans "Home" %}</a>
+    <li class="breadcrumb__item" id="breadcrumb-menu-home">
+        <a class="breadcrumb__link" href="{% url "home" %}">{% trans "Home" %}</a>
     </li>
     {% endif %}
 
     {% if page.is_current_or_ascendant %}
     {% if page.is_current %}
-    <li id="breadcrumb-menu-{{ page.html_id }}"
+    <li class="breadcrumb__item" id="breadcrumb-menu-{{ page.html_id }}"
         class="active">{{ page.title }}</li>
     {% else %}
-    <li id="breadcrumb-menu-{{ page.html_id }}">
-        <a href="{{ page.get_absolute_url }}">{{ page.title }}</a>
+    <li class="breadcrumb__item" id="breadcrumb-menu-{{ page.html_id }}">
+        <a class="breadcrumb__link" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
     </li>
     {% endif %}
     {% if page.has_children %}{% page_menu page %}{% endif %}
